[package]
name = "rdfs-namenode"
version = "0.1.0"
authors = ["Patrick White <patrick@patrickwhite.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
async-std = { version = "1.9.0", features = ["attributes"] }
paw = "1.0.0"
structopt = { version = "0.3.21", features = ["paw"] }
serde = { version = "1.0.123", features = ["derive"] }
toml = "0.5.8"
tracing = "0.1.22"
tracing-subscriber = { version = "0.2.15", features = ["tracing-log", "fmt"] }
tracing-futures = "0.2.4"
async-trait = "0.1.42"
protobuf = "2.20.0"
hexdump = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rdfs-proto]
path = "../rdfs-proto"
