[package]
name = "rdfs-proto"
version = "0.1.0"
authors = ["Patrick White <patrick@patrickwhite.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { version = "2.20.0", features = ["bytes"] }

[build-dependencies]
cargo-emit = "0.1.1"
protobuf-codegen-pure = "2.20.0"
anyhow = "1.0.38"
walkdir = "2.3.1"
